| Bug #28677 | SELECT on missing column gives extra error | ||
|---|---|---|---|
| Submitted: | 25 May 2007 13:14 | Modified: | 4 Jul 2007 1:41 |
| Reporter: | Jorge Bernal | Email Updates: | |
| Status: | Closed | ||
| Category: | Server | Severity: | S3 (Non-critical) |
| Version: | 5.0.27/5.1 | OS: | Any |
| Assigned to: | Martin Hansson | Target Version: | |
[25 May 2007 13:14]
Jorge Bernal
[25 May 2007 13:22]
Miguel Solorzano
Thank you for the bug report. Verified as described.
[14 Jun 2007 19:29]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28797 ChangeSet@1.2498, 2007-06-14 21:30:01+03:00, mhansson@linux-st28.site +5 -0 Bug#28677: SELECT on missing column gives extra error The method select_insert::send_error does two things, it rolls back a statement being executed and outputs an error message. But when a nonexistent column is referenced, an error message has been published already and there is no need to publish another. Fixed by 1) Factoring out the rollback functionality from select_result::send_error into new public method rollback_statement and making send_error call it. 2) Making handle_select call rollback_statement if an error message was published already.
[18 Jun 2007 11:12]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28980 ChangeSet@1.2498, 2007-06-18 13:13:47+03:00, mhansson@linux-st28.site +6 -0 Bug#28677: SELECT on missing column gives extra error The method select_insert::send_error does two things, it rolls back a statement being executed and outputs an error message. But when a nonexistent column is referenced, an error message has been published already and there is no need to publish another. Fixed by moving all functionality beyond publishing an error message into select_insert::abort() and calling only that function.
[18 Jun 2007 13:31]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/28992 ChangeSet@1.2498, 2007-06-18 15:32:05+03:00, mhansson@linux-st28.site +5 -0 Bug#28677: SELECT on missing column gives extra error The method select_insert::send_error does two things, it rolls back a statement being executed and outputs an error message. But when a nonexistent column is referenced, an error message has been published already and there is no need to publish another. Fixed by moving all functionality beyond publishing an error message into select_insert::abort() and calling only that function.
[18 Jun 2007 14:34]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29000 ChangeSet@1.2498, 2007-06-18 16:35:01+03:00, mhansson@linux-st28.site +5 -0 Bug#28677: SELECT on missing column gives extra error The method select_insert::send_error does two things, it rolls back a statement being executed and outputs an error message. But when a nonexistent column is referenced, an error message has been published already and there is no need to publish another. Fixed by moving all functionality beyond publishing an error message into select_insert::abort() and calling only that function.
[18 Jun 2007 15:03]
Konstantin Osipov
Bug #26432 "SELECT with an unknown column create an "Unknown error" in SHOW ERRORS" was marked a duplicate of this bug.
[19 Jun 2007 13:36]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/29111 ChangeSet@1.2562, 2007-06-19 15:37:52+03:00, mhansson@linux-st28.site +1 -0 Bug #28677: SELECT on missing column gives extra error Manual edit in order to merge from mysql-5.0 tree.
[1 Jul 2007 19:58]
Bugs System
Pushed into 5.1.21-beta
[1 Jul 2007 20:02]
Bugs System
Pushed into 5.0.46
[4 Jul 2007 1:41]
Paul DuBois
Noted in 5.0.46, 5.1.21 changelogs. Selecting a column not present in the selected-from table caused an extra error to be produced by SHOW ERRORS.
